--- a/profile.html
+++ b/profile.html
@@ -1,11 +1,36 @@
-
+<!DOCTYPE html> 
 <html>
-  <head>
-    <title>Profile</title>
-    <Meta> HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8</Meta>
-  </head>
-
-  <body>
-    <h1>ลาก่อน</h1>
-  </body>
+<head>
+   <meta charset="UTF-8">
+   <title> LITTLEJEAB WORLD </title>
+</head>
+<BODY >
+   <style>
+	body {
+  		background-image: url('S__4325432.jpg');
+		background-repeat: no-repeat;
+		background-attachment: fixed;
+		background-size: 100% 100%;
+	}
+</style> 
+  <marquee scrollamount= "10" behavior= “alternate” width="100%" bgcolor="#F7F2E9">**** ยินดีต้อนรับเข้าสู่ Littlejeab World ****</marquee>
+        <br>
+           <br>
+              <br>
+                 <br>
+      <table border="0" cellspacing="10px" align="center" width="100%">            
+         <td align="center" valign="top" width="100%">
+            <br>
+                 <body>
+            <p></p>
+           <p style="font-size: 90px ;">" WELCOME TO "</p> 
+           <br>
+           <p style="font-size: 90px ;">" LITTLEJEAB WORLD "</p> 
+         </td>
+      </table>
+    <br>
+      <center>
+         <a href="indo.html"> เข้าสู่ระบบ </a><p> 
+      </center>
+</body>
 </html>
