--- a/profile.html
+++ b/profile.html
@@ -2,18 +2,18 @@
 <html>
 <head>
    <meta charset="UTF-8">
-   <title> LITTLEJEAB WORLD </title>
+   <title> COME IN MY WORLD</title>
 </head>
 <BODY >
    <style>
 	body {
-  		background-image: url('S__4325432.jpg');
+  		background-image: url('wall.jpg');
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-size: 100% 100%;
 	}
 </style> 
-  <marquee scrollamount= "10" behavior= “alternate” width="100%" bgcolor="#F7F2E9">**** ยินดีต้อนรับเข้าสู่ Littlejeab World ****</marquee>
+  
         <br>
            <br>
               <br>
@@ -23,14 +23,14 @@
             <br>
                  <body>
             <p></p>
-           <p style="font-size: 90px ;">" WELCOME TO "</p> 
+           <p style="font-size: 50px ;">* * * THIS IS MY WORLD * * *</p> 
            <br>
-           <p style="font-size: 90px ;">" LITTLEJEAB WORLD "</p> 
+           <p style="font-size: 50px ;">*** JJPJ42 ***</p> 
          </td>
       </table>
     <br>
       <center>
-         <a href="indo.html"> เข้าสู่ระบบ </a><p> 
+         <a href="indo.html" style="font-size: 50px ;" > Into My Profile </a><p> 
       </center>
 </body>
 </html>
