--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 <BODY >
    <style>
 	body {
-  		background-image: url('wall.jpg');
+  		background-image:url("wall.jpg");
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-size: 100% 100%;
