--- a/profile.html
+++ b/profile.html
@@ -7,10 +7,14 @@
 <BODY >
    <style>
 	body {
+      width: 500px;
+      height: 700px;
+      box-shadow: inset 0 0 15px rgb(0, 0,0,0.4);
   		background-image:url("wall.jpg");
 		background-repeat: no-repeat;
 		background-attachment: fixed;
 		background-size: 100% 100%;
+     
 	}
 </style> 
   
